--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 </p>
                 <p class="text-gray-700 text-base text-justify mt-10">
                   A PWA which summarizes the Internet in shortest way possible.
-                  We brings the the top songs , games , news and all other stuff
+                  It brings the top songs , games , news and all other stuff
                   of the day in a neat and compiled manner.
                 </p>
                 <p class="text-gray-700 text-base">
@@ -131,7 +131,7 @@
             >
               <!-- <img class="w-full" src="/img/card-top.jpg" alt="Sunset in the mountains"> -->
               <div class="px-6 py-4">
-                <div class="font-bold text-xl mb-2">Expense Managr</div>
+                <div class="font-bold text-xl mb-2">Expense Manager</div>
                 <p class="text-gray-700 text-base">
                   <a
                     href="https://expense-managr.netlify.app/"
