added pics and meta tags

--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <meta property="og:image" content="/sahil-profile-pic.png" />
+    <meta property="og:image:secure_url" content="https://mywebsite.com/sahil-profile-pic.png" />
+    <meta name="description" content="Sahil Choudhary - Portfolio">
+    <meta name="author" content="Sahil Choudhary">
+    <meta name="keywords" content="Web designer | Web Developer | Data Analyst ">
+    <link rel="icon" type="image/png" sizes="32x32" href="sahil-profile-pic.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="sahil-profile-pic.png" />
     <link rel="stylesheet" href="/build/tailwind.css" />
     <link rel="stylesheet" href="tailwind.css" />
     <style>
