Added Timeline of life to Portfolio

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -14,8 +15,8 @@
     <meta name="keywords" content="Web designer | Web Developer | Data Analyst ">
     <link rel="icon" type="image/png" sizes="32x32" href="sahil-profile-pic.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="sahil-profile-pic.png" />
-    <link rel="stylesheet" href="/build/tailwind.css" />
     <link rel="stylesheet" href="tailwind.css" />
+    <link rel="stylesheet" href="custom.css" />
     <style>
       .mt-10 {
         margin-top: 10px !important;
@@ -72,10 +73,102 @@
     <div
       class="hidden bg-yellow-700 sm:bg-green-700 md:bg-red-700 lg:bg-blue-700 h-2"
     ></div>
+
+
+
+
+<!-- Timeline Starts -->
+    <section class="container mx-auto max-h-full text-center py-6 mb-12 text-black timeline">
+     <h1 class="w-full my-2 text-5xl font-bold leading-tight">Timeline</h1>
+     <div class="mx-10">
+
+<div class="m-4">
+<div class='w-full'>
+<div class="h-1 mx-auto gradient w-16 opacity-55 my-0 py-0 runded-t"></div>
+<span style="position: absolute;color: #f7fafc;">dummy</span>
+<div class='event-parent'>
+
+<div class='event event-1'>
+<p>2013 - 2014</p>
+<p style='color:#56c2f3;font-weight: bold;'>Class 10th</p>
+<p>93.1%</p>
+</div>
+
+<div class='event event-2'>
+ <p>2015 - 2016</p>
+ <p style='color:#CC72f5;font-weight: bold;'>Class 12th</p>
+ <p>91.2%</p>
+</div>
+
+<div class='event event-3 dummy'>
+ <p>2016 - June,2020</p>
+ <p style='color:#4a8b8f;font-weight: bold;'>Btech from VJTI,Mumbai</p>
+ <p>Electronics and Telecom</p>
+</div>
+
+<div class='event event-4'>
+ <p>May,2017 - July,2017</p>
+ <p style='color:#c2e34e;font-weight: bold;'>Foodiez</p>
+ <p>SEO Analyst</p>
+</div>
+
+<div class='event event-5'>
+ <p>Jan,2018 - March,2018</p>
+ <p style='color:#ff9704;font-weight: bold;'>TedxVJTI</p>
+ <p>Web developer</p>
+</div>
+
+<div class='event event-6'>
+ <p>2020 - March,2021</p>
+ <p style='color:#56c2f3;font-weight: bold;'>Khelomore</p>
+ <p>Software developer</p>
+</div>
+
+<div class='event event-7'>
+ <p>March,2021 - Present</p>
+ <p style='color:#ddcd01;font-weight: bold;'>Ugam Solutions</p>
+ <p>Web developer</p>
+</div>
+</div>
+
+<div class='year-parent'>
+<span class='year year-1'>2014</span>
+<span class='year year-2'>2016</span>
+<span class='year year-3'>2020</span>
+<span class='year year-4'>2021</span>
+</div>
+
+
+</div>
+
+</div>
+
+</div>
+
+    </section>
+
+
+
+
+<!-- Timeline ends -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <!-- Projects -->
     <section class="py-8">
       <div class="container mx-auto m-8">
-        <h1 class="w-full my-2 text-5xl font-bold leading-tight text-center">
+        <h1 class="w-full my-2 text-5xl font-bold leading-tight text-center build-title">
           Building Stuff
         </h1>
         <div class="w-full mb-10">
