--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 <div class='event event-7'>
  <p>March,2021 - Present</p>
  <p style='color:#ddcd01;font-weight: bold;'>Ugam Solutions</p>
- <p>Web developer</p>
+ <p>Data Analyst</p>
 </div>
 </div>
 
