--- a/index.html
+++ b/index.html
@@ -78,14 +78,15 @@
 
 
 <!-- Timeline Starts -->
-    <section class="container mx-auto max-h-full text-center py-6 mb-12 text-black timeline">
+    <section class="container mx-auto max-h-full text-center mb-12 text-black ">
      <h1 class="w-full my-2 text-5xl font-bold leading-tight">Journey so far</h1>
      <div class="mx-10">
 
 <div class="m-4">
-<div class='w-full'>
+<div class='w-full '>
 <div class="h-1 mx-auto gradient w-16 opacity-55 my-0 py-0 runded-t"></div>
 <span style="position: absolute;color: #f7fafc;">dummy</span>
+<div class='timeline'>
 <div class='event-parent'>
 
 <div class='event event-1'>
@@ -138,7 +139,7 @@
 <span class='year year-4'>2021</span>
 </div>
 
-
+</div>
 </div>
 
 </div>
