--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 <!-- Timeline Starts -->
     <section class="container mx-auto max-h-full text-center mb-12 text-black ">
-     <h1 class="w-full my-2 text-5xl font-bold leading-tight">Journey so far</h1>
+     <h1 class="w-full my-2 text-5xl font-bold leading-tight journey">Journey so far</h1>
      <div class="mx-10">
 
 <div class="m-4">
