--- a/index.html
+++ b/index.html
@@ -182,6 +182,85 @@
           style="display:flex;
         justify-content: center !important;align-items: center:  !important;;"
         >
+
+          <!-- project Tableau Documentor -->
+          <a href="https://hksahil-tableau-documentor-v2-app-nmez9c.streamlitapp.com/" target="_blank">
+            <div
+              class="flex-auto lg:max-w-lg rounded overflow-hidden shadow-md hover:shadow-lg m-4 bg-white"
+            >
+              <!-- <img class="w-full" src="/img/card-top.jpg" alt="Sunset in the mountains"> -->
+              <div class="px-6 py-4">
+                <div class="font-bold text-xl mb-2">Tableau Documentor</div>
+                <p class="text-gray-700 text-base">
+                  <a
+                    href="https://hksahil-tableau-documentor-v2-app-nmez9c.streamlitapp.com/"
+                    class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2"
+                    target="_blank"
+                    >Go to site</a
+                  >
+                </p>
+                <p class="text-gray-700 text-base text-justify mt-10">
+                  A website which makes the documentation of any Tableau workbook easy.
+                  Generate a csv/excel file with all the calculated fields and parameters in just a single click.
+                </p>
+                <p class="text-gray-700 text-base">
+                  Learned: TWBx format, TWB format, XML Scrapping
+                </p>
+              </div>
+              <div class="px-6 py-4">
+                <span
+                  class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2"
+                  >#Tableau</span
+                >
+                <span
+                  class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2"
+                  >#XML</span
+                >
+              </div>
+            </div>
+          </a>
+
+            <!-- project Python 101 -->
+            <a href="https://python101.ml/intro.html" target="_blank">
+                <div
+                  class="flex-auto lg:max-w-lg rounded overflow-hidden shadow-md hover:shadow-lg m-4 bg-white"
+                >
+                  <!-- <img class="w-full" src="/img/card-top.jpg" alt="Sunset in the mountains"> -->
+                  <div class="px-6 py-4">
+                    <div class="font-bold text-xl mb-2">Python 101 - Digital ebook</div>
+                    <p class="text-gray-700 text-base">
+                      <a
+                        href="https://python101.ml/intro.html"
+                        class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2"
+                        target="_blank"
+                        >Go to site</a
+                      >
+                    </p>
+                    <p class="text-gray-700 text-base text-justify mt-10">
+                        Created this digital ebook in which I write about "tech", and try to condense the knowledge I've accumulated over the last six years of my life.
+                    </p>
+                    <p class="text-gray-700 text-base">
+                      Learned: Data Analytics, Python, Tableau
+                    </p>
+                  </div>
+                  <div class="px-6 py-4">
+                    <span
+                      class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2"
+                      >#Data Analytics</span
+                    >
+                    <span
+                      class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2"
+                      >#Python</span
+                    >
+                    <span
+                      class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700"
+                      >#Data Science</span
+                    >
+                  </div>
+                </div>
+              </a>
+
+
           <!-- project 1 -->
           <a href="https://tldroftheinternet.org" target="_blank">
             <div
