--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </span>
             <div class="text-center sm:text-left mb-20 sm:mb-0" style="margin-top:50px">
               <a
-                href="https://www.linkedin.com/in/offiicialhksahil/"
+                href="https://topmate.io/sahil_choudhary"
                 target="_blank"
               >
                 <button
