--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         >
 
           <!-- project Tableau Documentor -->
-          <a href="https://hksahil-tableau-documentor-v2-app-nmez9c.streamlitapp.com/" target="_blank">
+          <a href="https://tableau-documentor.streamlit.app/" target="_blank">
             <div
               class="flex-auto lg:max-w-lg rounded overflow-hidden shadow-md hover:shadow-lg m-4 bg-white"
             >
@@ -199,7 +199,7 @@
                 <div class="font-bold text-xl mb-2">Tableau Documentor</div>
                 <p class="text-gray-700 text-base">
                   <a
-                    href="https://hksahil-tableau-documentor-v2-app-a9iqsr.streamlitapp.com/"
+                    href="https://tableau-documentor.streamlit.app/"
                     class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2"
                     target="_blank"
                     >Go to site</a
