--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -188,8 +187,79 @@
           style="display:flex;
         justify-content: center !important;align-items: center:  !important;;"
         >
+        
+        <!-- AI Analysis -->
+        <a href="https://ai-toolkit.streamlit.app/" target="_blank">
+            <div
+              class="flex-auto lg:max-w-lg rounded overflow-hidden shadow-md hover:shadow-lg m-4 bg-white"
+            >
+              <!-- <img class="w-full" src="/img/card-top.jpg" alt="Sunset in the mountains"> -->
+              <div class="px-6 py-4">
+                <div class="font-bold text-xl mb-2">AI Analysis</div>
+                <p class="text-gray-700 text-base">
+                  <a
+                    href="https://ai-toolkit.streamlit.app/"
+                    class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2"
+                    target="_blank"
+                    >Go to site</a
+                  >
+                </p>
+                <p class="text-gray-700 text-base text-justify mt-10">
+                  A website which uses ChatGPT to make the life of Analysts easier.</p>
+                <p class="text-gray-700 text-base">
+                  Learned: ChatGPT, AI, Tableau
+                </p>
+              </div>
+              <div class="px-6 py-4">
+                <span
+                  class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2"
+                  >#ChatGPT</span
+                >
+                <span
+                  class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2"
+                  >#AI</span
+                >
+              </div>
+            </div>
+          </a>
 
-          <!-- project Tableau Documentor -->
+          <!-- Salary Incrementor -->
+        <a href="https://increment.streamlit.app/" target="_blank">
+            <div
+              class="flex-auto lg:max-w-lg rounded overflow-hidden shadow-md hover:shadow-lg m-4 bg-white"
+            >
+              <!-- <img class="w-full" src="/img/card-top.jpg" alt="Sunset in the mountains"> -->
+              <div class="px-6 py-4">
+                <div class="font-bold text-xl mb-2">Salary Increment Calculator</div>
+                <p class="text-gray-700 text-base">
+                  <a
+                    href="https://increment.streamlit.app/"
+                    class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2"
+                    target="_blank"
+                    >Go to site</a
+                  >
+                </p>
+                <p class="text-gray-700 text-base text-justify mt-10">
+                  A website which helps you find the increments on your Salary and negotiate better </p>
+                <p class="text-gray-700 text-base">
+                  Learned: Streamlit
+                </p>
+              </div>
+              <div class="px-6 py-4">
+                <span
+                  class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2"
+                  >#Streamlit</span
+                >
+                <span
+                  class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2"
+                  >#Python</span
+                >
+              </div>
+            </div>
+          </a>
+
+
+          <!-- Project Tableau Documentor -->
           <a href="https://tableau-documentor.streamlit.app/" target="_blank">
             <div
               class="flex-auto lg:max-w-lg rounded overflow-hidden shadow-md hover:shadow-lg m-4 bg-white"
@@ -226,7 +296,7 @@
             </div>
           </a>
 
-            <!-- project Python 101 -->
+            <!-- Project Python 101 -->
             <a href="https://python101.ml/intro.html" target="_blank">
                 <div
                   class="flex-auto lg:max-w-lg rounded overflow-hidden shadow-md hover:shadow-lg m-4 bg-white"
