--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
           </a>
 
             <!-- Project Python 101 -->
-            <a href="https://python101.ml/intro.html" target="_blank">
+            <a href="https://python-with-sahil.netlify.app" target="_blank">
                 <div
                   class="flex-auto lg:max-w-lg rounded overflow-hidden shadow-md hover:shadow-lg m-4 bg-white"
                 >
@@ -306,7 +306,7 @@
                     <div class="font-bold text-xl mb-2">Python 101 - Digital ebook</div>
                     <p class="text-gray-700 text-base">
                       <a
-                        href="https://python101.ml/intro.html"
+                        href="https://python-with-sahil.netlify.app"
                         class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2"
                         target="_blank"
                         >Go to site</a
