--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
     <!-- before footer -->
     <section style="display:flex;justify-content: center;">
     <div class="text-center sm:text-left sm:mb-0" >
-      <a href="Sahil_resume.pdf" target="_blank">
+      <a href="sahil_resume.pdf" target="_blank">
         <button class="gradient h-16 w-64 text-gray-300 m-2 rounded-lg mt-10 text-center font-semibold peak" style="color:#0072a0;background-color: #a5e5ff;">
           Download Resume
         </button></a>
