--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta
-      name="viewport"
+      name="viffdewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta property="og:image" content="/sahil-profile-pic.png" />
